force-app/main/default/objects/AssetDataSources__mdt/AssetDataSources__mdt.object-meta.xml
<CustomObject>
    <description>Asset data sources settings</description>
    <label>Asset Data Source</label>
    <pluralLabel>Asset Data Sources</pluralLabel>
</CustomObject>