force-app/main/default/objects/AssetDataSources__mdt/fields/Cluster1__c.field-meta.xml
<CustomField>
    <fullName>Cluster1__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Cluster1</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>