force-app/main/default/objects/AssetDataSources__mdt/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Base endpoint for asset data source</description>
    <label>Endpoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>